--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -14,6 +14,9 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+.flex.low {
+    justify-content: flex-start;
+}
 .flex.col {
     flex-direction: column;
 }
