--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -45,6 +45,10 @@ body {
 .section .section-header {
     margin-bottom: 1rem;
 }
+/* from element-plus */
+.el-dialog {
+    border-radius: 1rem;
+}
 /* utilities */
 .flex {
     display: flex;
